--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ before_install:
   - unset CC
   - sudo add-apt-repository ppa:hvr/ghc -y
   - sudo apt-get update -q
+  - sudo apt-get install libsdl2-dev libgirepository1.0-dev libgtk-3-dev libcairo2-dev libcairo-gobject2 -y 
   - sudo apt-get install cabal-install-3.4 ghc-8.10.2 happy-1.19.5 alex-3.1.7 -y
-  - sudo apt-get install libgirepository1.0-dev libgtk-3-dev libcairo2-dev libcairo-gobject2 -y
   - export PATH="$HOME/.cabal/bin:/opt/ghc/bin:/opt/cabal/bin:$PATH"
 
 install:
@@ -31,6 +31,6 @@ install:
 
 script:
   - rm -f _build/*/*/*.changes
-  - cabal v2-build -- --keep-going -j2
+  - cabal v2-build all
   - cabal v2-test all
   - hlint
