--- a/gi-cairo-render/gi-cairo-render.cabal
+++ b/gi-cairo-render/gi-cairo-render.cabal
@@ -6,7 +6,7 @@ Copyright:      (c) 2018 Kilian Kilger, (c) 2001-2010 The Gtk2Hs Team, (c) Paolo
 Author:         Axel Simon, Duncan Coutts
 Maintainer:     Kilian Kilger (kkilger@gmail.com)
 Build-Type:     Simple
-Cabal-Version:  >= 1.24
+Cabal-Version:  1.24
 Stability:      experimental
 homepage:       https://github.com/cohomology/gi-cairo-render
 bug-reports:    https://github.com/cohomology/gi-cairo-render/issues
